# truenorth

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  package.xml  package.xml~  readme.txt
config/: system_monitor.yaml
include/kvh_1775/: andrews_func.h  gyro_data.h  helper_funcs.h  kvh_gyro_data.h  serial_io.h  serial_io.h~  so3_adap_id.h
include/truenorth/: EKF.h  att_consumer.h  att_est.h  bias_consumer.h  bias_est.h  consumer.h  fog_bias.h  gyro_data.h  helper_funcs.h  log_consumer.h  mems_bias.h  parse_params.h  serial_io.h  serial_io.h~  so3_adap_id.h  so3_att.h  thread.h  wqueue.h
launch/: att_est.launch  kvh_1775.launch  kvh_ms.launch  ros_system_monitor.launch  tconnect.sh  tlaunch_full.sh  truenorth.launch  truenorth_cpu_monitor.launch  truenorth_rosbag.launch
matlab/: R2rph.m  Rb_from_avg.m  adap_Rbar.m  adap_filt.m  adap_so3.m  att_est.m  calc_bias.m  calc_v.m  calc_wbe.m  calc_wearth.m  data_sensitivity.m  dsm.m  est_config.m  find_wb.m  fit_2_sets.m  gen_samples.m  gensamples.m  get_R_bar.m  get_R_d.m  get_R_delta.m  get_bias.m  get_w.m  getstartR.m  hsm.m  indv_samp_ned.m  int_bias.m  int_plant.m  msm.m  my_lowpass.m  park_jacob.m  parse_bag.m  parse_csv.m  plot_E.m  plot_adap.m  plot_att_error.m  plot_att_error2.m  plot_comp.m  plot_components.m  plot_errors.m  plot_hist_acc_ang.m  (+24 more)
matlab/simulations/: gen_samp.m  gyro_sensitivity.m  plot_sensitivity.m
msg/: gyro_sensor_data.msg  gyro_sensor_data.msg~  imu.msg  imu_bias.msg  kvh_imu.msg
python/: gen_config_file.py  plot_att.py  taxis.py
scripts/: LLW_fminsearch_notes.txt  att_process_script.sh  backup_data_to_sea_server.sh  bias_process_script.sh  comp_filt.m  llw_att_process_script_sentry493.sh  llw_att_process_script_sentry494.sh  llw_rsync_10hz_from_data_archive.sh  llw_sim_006.m  llw_sim_007.m  llw_sim_007_pdf_figures.m  llw_sim_008.m  llw_sim_009.m  llw_sim_010.m  llw_sim_011.m  llw_sim_012.m  llw_sim_013.m  llw_sim_013_results.m  llw_sim_014.m  llw_sim_014_results.m  llw_sim_015.m  llw_sim_015_sentry494_24_param.mat  llw_sim_016.m  llw_sim_016_sentry492_24_param.mat  llw_sim_017.m  llw_sim_017_sentry494_survey_only_18_param_const_bias.mat  llw_sim_018.m  llw_sim_018_sentry492_survey_only_18_param_const_bias.mat  llw_sim_019.m  llw_sim_019_sentry494_survey_only_first_30_min_18_param_const_bias.mat  llw_sim_020.m  llw_sim_020_sentry492_survey_only_first_30_min_18_param_const_bias.mat  llw_sim_021.m  llw_sim_021_022_results.mat  llw_sim_021_sentry494_survey_only_18_param_const_bias.mat  llw_sim_022.m  llw_sim_022_sentry492_survey_only_18_param_const_bias.mat  llw_sim_100.m  llw_sim_dive_bottom_492_once.m  llw_sim_dive_bottom_494_once.m  (+34 more)
scripts/llw_notes/: LLW_fminsearch_notes.txt
src/: EKF.cpp  README.txt  att_est.cpp  bias_est.cpp  bias_process.cpp  convert_ms_log.cpp  data_2_csv.cpp  ekf_process.cpp  fog_bias.cpp  fog_bias_orig.cpp  gyro_data.cpp  gyro_publisher.cpp  gyro_publisher.cpp~  hex2bin.cpp  kvh_gyro_data.cpp  listener.cpp  mems_bias.cpp  mems_process.cpp  post_process.cpp  serial_io.cpp  serial_io.cpp~  so3_adap_id.cpp  so3_att.cpp  thread.cpp  throttle.cpp  tslice.py
