<?xml version="1.0"?>
<package>
  <name>truenorth</name>
  <version>0.0.1</version>
  <description>The truenorth package</description>

  <maintainer email="andrewspielvogel@gmail.com">Andrew Spielvogel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
