<?xml version="1.0"?>
<package>
  <name>truenorth</name>
  <version>0.0.1</version>
  <description>The truenorth package</description>

  <maintainer email="andrewspielvogel@gmail.com">Andrew Spielvogel</maintainer>

  <license>BSD</license>
  
  find_package(Eigen3 REQUIRED)
  include_directories(${Eigen_INCLUDE_DIRS})
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>helper_funcs</build_depend>
  <build_depend>dscl_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>dscl_msgs</run_depend>
  <run_depend>helper_funcs</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
